2009-12-02  Pavel Feldman  <pfeldman@dhcp-172-28-174-220.spb.corp.google.com>

        Reviewed by Timothy Hatcher.

        Web Inspector: DOM tree selection disappears upon page refresh.

        https://bugs.webkit.org/show_bug.cgi?id=31142

        * inspector/elements-panel-selection-on-refresh-expected.txt: Added.
        * inspector/elements-panel-selection-on-refresh.html: Added.

2009-12-02  Csaba Osztrogonác  <ossy@webkit.org>

        [Qt] r51577 made fast/frames/sandboxed-iframe-plugins.html crash.

        * platform/qt/Skipped: 
        - fast/frames/sandboxed-iframe-navigation-windowopen.html added. (crasher)

2009-12-02  Csaba Osztrogonác  <ossy@webkit.org>

        [Qt] Unreviewed. Skip new tests.

        * platform/qt/Skipped:
        - svg/custom/mask-with-all-units.svg added.
        - fast/css/namespaces/namespaces-comments.xml added.
        - fast/css/namespaces/namespaces-empty.xml added.

2009-12-02  Fumitoshi Ukai  <ukai@chromium.org>

        Reviewed by Alexey Proskuryakov.

        WebSocket handshake check query component of URL
        https://bugs.webkit.org/show_bug.cgi?id=31617

        * websocket/tests/echo-location_wsh.py: Added.
        * websocket/tests/no-query_wsh.py: Added.
        * websocket/tests/script-tests/url-with-credential.js: Added.
        * websocket/tests/script-tests/url-with-empty-query.js: Added.
        * websocket/tests/script-tests/url-with-fragment.js: Added.
        * websocket/tests/script-tests/url-with-query-for-no-query.js: Added.
        * websocket/tests/script-tests/url-with-query.js: Added.
        * websocket/tests/url-with-credential-expected.txt: Added.
        * websocket/tests/url-with-credential.html: Added.
        * websocket/tests/url-with-empty-query-expected.txt: Added.
        * websocket/tests/url-with-empty-query.html: Added.
        * websocket/tests/url-with-fragment-expected.txt: Added.
        * websocket/tests/url-with-fragment.html: Added.