@@ -1,0 +1,12 @@
+Tests the Timeline API instrumentation of a DOM Dispatch (mousedown)
+
+Test Mouse Target
+EventDispatch Properties:
++ startTime : * DEFINED *
++ data : {
++- type : mousedown
++ }
++ children : * DEFINED *
++ endTime : * DEFINED *
++ type : 0
+
